crates/pg_syntax/tests/snapshots/postgres_regress/oid@11.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO OID_TBL(f1) VALUES ('    ');"
---
InsertStmt@0..40
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..19
    Ident@12..19 "OID_TBL"
  Ascii40@19..20 "("
  ResTarget@20..22
    Ident@20..22 "f1"
  Ascii41@22..23 ")"
  Whitespace@23..24 " "
  SelectStmt@24..38
    Values@24..30 "VALUES"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..38
      AConst@32..38
        Sconst@32..38 "'    '"
  Ascii41@38..39 ")"
  Ascii59@39..40 ";"

